--- a/Life in Russia/Life in Russia.vcxproj
+++ b/Life in Russia/Life in Russia.vcxproj
@@ -152,6 +152,9 @@
   <ItemGroup>
     <ClCompile Include="Life in Russia.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Game.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
